tests/fixtures/realworld/istio/valid/case-028-RW-8-28-Gateway-valid-with-capture-none.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: capture-none-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - no-capture.example.com
    defaultEndpoint: 127.0.0.1:8080
